refatorada aplicacao para aceitar autenticacao