@@ -1,7 +1,11 @@
 package br.com.joaopedroafluz.timely.trip;
 
 import br.com.joaopedroafluz.timely.activity.*;
-import br.com.joaopedroafluz.timely.participant.*;
+import br.com.joaopedroafluz.timely.tripParticipant.TripParticipant;
+import br.com.joaopedroafluz.timely.tripParticipant.TripParticipantService;
+import br.com.joaopedroafluz.timely.user.User;
+import br.com.joaopedroafluz.timely.user.UserDTO;
+import br.com.joaopedroafluz.timely.user.UserService;
 import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -20,61 +24,100 @@ import java.util.stream.Collectors;
 @RequestMapping("/trips")
 public class TripController {
 
-    private final TripRepository tripRepository;
+    private final TripService tripService;
+    private final UserService userService;
     private final ActivityService activityService;
-    private final ParticipantService participantService;
+    private final TripParticipantService tripParticipantService;
 
     // Trips
     @GetMapping("/{tripCode}")
-    public ResponseEntity<Trip> findTripByCode(@PathVariable("tripCode") UUID tripCode) {
-        var trip = tripRepository.findByCode(tripCode);
-
-        return trip.map(ResponseEntity::ok).orElse(ResponseEntity.notFound().build());
-    }
-
-    @PostMapping
-    @ResponseStatus(HttpStatus.CREATED)
-    public ResponseEntity<TripCreateResponse> createTrip(@RequestBody TripRequestPayload payload) {
-        var newTrip = new Trip(payload);
-
-        tripRepository.save(newTrip);
-
-        Participant participant = Participant.builder()
-                .trip(newTrip)
-                .code(UUID.randomUUID())
-                .name(payload.ownerName())
-                .email(payload.ownerEmail())
-                .confirmedAt(LocalDateTime.now())
-                .build();
-
-        participantService.registerParticipantsTotEvent(participant, payload.emailsToInvite(), newTrip);
-
-        return ResponseEntity.ok(new TripCreateResponse(newTrip.getCode()));
-    }
-
-    @PutMapping("/{tripCode}")
-    public ResponseEntity<Trip> updateTrip(@PathVariable("tripCode") UUID tripCode,
-                                           @RequestBody TripRequestPayload payload) {
-        var trip = tripRepository.findByCode(tripCode);
+    public ResponseEntity<TripResponseDTO> findTripByCode(@PathVariable("tripCode") UUID tripCode) {
+        var trip = tripService.findByCode(tripCode);
 
         if (trip.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
 
-        trip.get().setOwnerName(payload.ownerName());
-        trip.get().setOwnerEmail(payload.ownerEmail());
+        var owner = trip.get().getOwner();
+
+        var ownerDTO = new UserDTO(owner.getCode(), owner.getName(), owner.getEmail());
+
+        var tripResponseDTO = new TripResponseDTO(trip.get().getCode(), ownerDTO, trip.get().getDestination(),
+                trip.get().getStartsAt(), trip.get().getEndsAt(), trip.get().getCreatedAt(),
+                trip.get().getConfirmedAt());
+
+        return ResponseEntity.ok().body(tripResponseDTO);
+    }
+
+    @PostMapping
+    @ResponseStatus(HttpStatus.CREATED)
+    public ResponseEntity<TripCreateResponse> createTrip(@RequestBody NewTripRequestDTO payload) {
+        var owner = userService.findByCode(payload.ownerCode());
+        if (owner.isEmpty()) {
+            return ResponseEntity.badRequest().build();
+        }
+
+        var newTrip = Trip.builder()
+                .code(UUID.randomUUID())
+                .owner(owner.get())
+                .destination(payload.destination())
+                .startsAt(LocalDateTime.parse(payload.startsAt()))
+                .endsAt(LocalDateTime.parse(payload.endsAt()))
+                .build();
+
+        var registeredUsers = userService.findAllByEmail(payload.participantsEmail());
+
+        var newUsers = payload.participantsEmail().stream()
+                .filter(email -> registeredUsers.stream()
+                        .noneMatch(user -> user.getEmail().equals(email)))
+                .map(email -> User.builder()
+                        .code(UUID.randomUUID())
+                        .email(email)
+                        .build())
+                .toList();
+
+        userService.saveAll(newUsers);
+
+        var allUsers = new ArrayList<>(registeredUsers);
+        allUsers.addAll(newUsers);
+
+        List<TripParticipant> participants = allUsers.stream()
+                .filter(user -> payload.participantsEmail().contains(user.getEmail()))
+                .map(user -> TripParticipant.builder()
+                        .user(user)
+                        .trip(newTrip)
+                        .build())
+                .toList();
+
+        newTrip.setParticipants(participants);
+
+        var persistedTrip = tripService.save(newTrip);
+
+        return ResponseEntity.ok(new TripCreateResponse(persistedTrip.getCode()));
+    }
+
+    @PutMapping("/{tripCode}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public ResponseEntity<Void> updateTrip(@PathVariable("tripCode") UUID tripCode,
+                                           @RequestBody UpdatedTripRequestDTO payload) {
+        var trip = tripService.findByCode(tripCode);
+
+        if (trip.isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
+
         trip.get().setDestination(payload.destination());
         trip.get().setStartsAt(LocalDateTime.parse(payload.startsAt(), DateTimeFormatter.ISO_DATE_TIME));
         trip.get().setEndsAt(LocalDateTime.parse(payload.endsAt(), DateTimeFormatter.ISO_DATE_TIME));
 
-        tripRepository.save(trip.get());
+        tripService.save(trip.get());
 
-        return ResponseEntity.ok(trip.get());
+        return ResponseEntity.noContent().build();
     }
 
     @PatchMapping("/{tripCode}/confirm")
-    public ResponseEntity<String> confirmTrip(@PathVariable("tripCode") UUID tripCode) {
-        var trip = tripRepository.findByCode(tripCode);
+    public ResponseEntity<?> confirmTrip(@PathVariable("tripCode") UUID tripCode) {
+        var trip = tripService.findByCode(tripCode);
 
         if (trip.isEmpty()) {
             return ResponseEntity.notFound().build();
@@ -86,82 +129,90 @@ public class TripController {
 
         trip.get().setConfirmedAt(LocalDateTime.now());
 
-        tripRepository.save(trip.get());
-        participantService.triggerConfirmationEmailToParticipants(trip.get().getCode());
+        tripService.save(trip.get());
 
-        return ResponseEntity.ok().body("Trip confirmed");
+        return ResponseEntity.noContent().build();
     }
 
 
     // Participants
     @GetMapping("/{tripCode}/participants")
-    public ResponseEntity<List<ParticipantResponseDTO>> findParticipantsByTripCode(
+    public ResponseEntity<List<UserDTO>> findParticipantsByTripCode(
             @PathVariable("tripCode") UUID tripCode) {
-        var trip = tripRepository.findByCode(tripCode);
+        var trip = tripService.findByCode(tripCode);
 
         if (trip.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
 
-        var participantsByTripCode = participantService.findParticipantsByTripCode(tripCode);
+        var participantsByTripCode = userService.findAllByTripCode(tripCode);
 
-        var participants = participantsByTripCode.stream()
-                .map(participant -> new ParticipantResponseDTO(
-                        participant.getTrip().getCode(),
-                        participant.getCode(),
-                        participant.getName(),
-                        participant.getEmail(),
-                        participant.getConfirmedAt())
-                )
-                .collect(Collectors.toList());
+        var participantsDTO = participantsByTripCode.stream()
+                .map(participant -> new UserDTO(participant.getCode(), participant.getName(),
+                        participant.getEmail()))
+                .toList();
 
-        return ResponseEntity.ok().body(participants);
+        return ResponseEntity.ok().body(participantsDTO);
     }
 
     @PostMapping("/{tripCode}/participants")
     @ResponseStatus(HttpStatus.CREATED)
-    public ResponseEntity<ParticipantInvitedResponse> inviteParticipants(@PathVariable UUID tripCode,
-                                                                         @RequestBody ParticipantRequestPayload payload) {
-        var trip = tripRepository.findByCode(tripCode);
+    public ResponseEntity<?> inviteParticipants(@PathVariable UUID tripCode,
+                                                @RequestBody NewParticipantRequestDTO payload) {
+        var trip = tripService.findByCode(tripCode);
 
         if (trip.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
 
-        var participant = participantService.registerParticipantTotEvent(payload.email(), trip.get());
+        TripParticipant newParticipant;
 
-        if (trip.get().getConfirmedAt() != null) {
-            participantService.triggerConfirmationEmailToParticipant(payload.email());
+        var userRegistered = userService.findByEmail(payload.email());
+
+        if (userRegistered.isPresent()) {
+            newParticipant = TripParticipant.builder()
+                    .user(userRegistered.get())
+                    .trip(trip.get())
+                    .build();
+        } else {
+            var newUser = User.builder()
+                    .code(UUID.randomUUID())
+                    .email(payload.email())
+                    .build();
+
+            userService.save(newUser);
+
+            newParticipant = TripParticipant.builder()
+                    .user(newUser)
+                    .trip(trip.get())
+                    .build();
         }
 
-        return ResponseEntity.ok(new ParticipantInvitedResponse(participant.getCode()));
+        tripService.addParticipant(trip.get(), newParticipant);
+
+        return ResponseEntity.noContent().build();
     }
 
     @DeleteMapping("/{tripCode}/participants/{participantCode}")
     @ResponseStatus(HttpStatus.NO_CONTENT)
     public ResponseEntity<?> removeParticipant(@PathVariable("tripCode") UUID tripCode,
                                                @PathVariable("participantCode") UUID participantCode) {
-        var trip = tripRepository.findByCode(tripCode);
+        var tripParticipant = tripParticipantService.findByCode(tripCode, participantCode);
 
-        if (trip.isEmpty()) {
+        if (tripParticipant.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
 
-        var participant = participantService.findByCode(participantCode);
-
-        if (participant.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-
-        participantService.removeParticipant(participant.get());
+        tripParticipantService.remove(tripParticipant.get());
 
         return ResponseEntity.ok().build();
     }
 
     // Activities
     @GetMapping("/{tripCode}/activities")
-    public ResponseEntity<List<ActivitiesResponseDTO>> findActivitiesByTripCode(@PathVariable("tripCode") UUID tripCode) {
-        var trip = tripRepository.findByCode(tripCode);
+    public ResponseEntity<List<ActivitiesResponseDTO>> findActivitiesByTripCode(@PathVariable("tripCode")
+                                                                                UUID tripCode) {
+        var trip = tripService.findByCode(tripCode);
 
         if (trip.isEmpty()) {
             return ResponseEntity.notFound().build();
@@ -195,7 +246,7 @@ public class TripController {
     @ResponseStatus(HttpStatus.CREATED)
     public ResponseEntity<ActivityCreatedResponse> createActivity(@PathVariable UUID tripCode,
                                                                   @RequestBody ActivityRequestPayload payload) {
-        var trip = tripRepository.findByCode(tripCode);
+        var trip = tripService.findByCode(tripCode);
 
         if (trip.isEmpty()) {
             return ResponseEntity.notFound().build();
@@ -215,8 +266,9 @@ public class TripController {
     }
 
     @DeleteMapping("/{tripCode}/activities/{activityCode}")
-    public ResponseEntity<Void> removeActivity(@PathVariable("tripCode") UUID tripCode, @PathVariable("activityCode") UUID activityCode) {
-        var trip = tripRepository.findByCode(tripCode);
+    public ResponseEntity<Void> removeActivity(@PathVariable("tripCode") UUID tripCode,
+                                               @PathVariable("activityCode") UUID activityCode) {
+        var trip = tripService.findByCode(tripCode);
 
         if (trip.isEmpty()) {
             return ResponseEntity.notFound().build();
